<resources>
    <string name="app_name">המלון של הילברט</string>
    <string name="title_activity_welcome">WelcomeAct</string>

    <string name="startGame">התחל</string>
    <string name="firstClue">רמז #1</string>
    <string name="secondClue">רמז #2</string>
    <string name="thirdClue">רמז #3</string>
    <string name="fourthClue">רמז #4</string>
    <string name="fifthClue">רמז #5</string>
    <string name="sixthClue">רמז #6</string>
    <string name="seventhClue">רמז #7</string>
    <string name="eightsClue">רמז #8</string>
    <string name="ninthClue">רמז #9</string>
    <string name="tenthClue">רמז #10</string>
    <string name="eleventhClue">רמז #11</string>
    <string name="twelfthClue">רמז #12</string>
    <string name="submit">sumbit</string>
    <string name="error">ססמא שגוייה, נסו שוב</string>
    <string name="accessDenied">עלייך לפתור את הרמזים הקודמים בשביל לפתוח את הרמז הזה</string>
    <string name="firstcheck">בדיקה</string>
    <string name="firstWrong">טעות! נסו שוב</string>
    <string name="continuar">המשך</string>
    <string name="correct">נכון!</string>
    <string name="firstEmoji">"חידה #1"</string>
    <string name="secondEmoji">"חידה #2"</string>
    <string name="thirdEmoji">"חידה #3"</string>
    <string name="pressForClue">לקבלת הרמז הבא</string>
    <string name="callMeMaybe">Call me, maybe?</string>
    <string name="getAClue">בקשו רמז בקבוצה</string>
    <string name="bookN">שם הספר</string>
    <string name="wait">טוען...</string>
    <string name="emergencia">מתקשר ל: משטרה...</string>
    <string name="jk">סתאאאם:) תתרכזו במשחק!</string>
    <string name="message"> \nמאחורי כל אייקון נמצא רמז.
\nאבל רק מאחורי אייקון
    אחד נמצא הרמז הנכון...</string>
    <string name="denied">Access denied</string>
    <string name="lastClue">הגעתם לשלב האחרון!!!</string>
    <string name="and">+</string>
    <string name="equals">=</string>

    <string name="url">https://chat.whatsapp.com/CpmlLGBke45CZpuUKlxpTF</string>
    <string name="wrongPassword">הקוד שגוי, נסו שוב אחר כך</string>
    <string name="recWrong">טעות במלבן האדום, נסו שוב</string>
    <string name="sqWrong">טעות בריבוע הכחול, נסו שוב</string>
    <string name="cirWrong">טעות בעיגול הצהוב, נסו שוב</string>
    <string name="asterix">asterix</string>
    <string name="finished">הכניסו את הקוד שעל המפתח\nשמצאתם כדי לסיים את המשחק</string>
<string name="enterPassword">הכניסו את הקוד שמצאתם ברמז הקודם</string>
    <string name="theEnd">סיימתם אם המשחק! מקווה שנהנתם!</string>

</resources>
